# Justjit

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  ERRORS.md  README.md  benchmark.py  blog_post.md  opcodes_reference.txt  pyproject.toml
.github/workflows/: eslint.yml  wheels.yml
docs/: OPCODES_REFERENCE.md  api.rst  conf.py  index.rst  internals.rst  modes.rst  performance.rst  quickstart.rst
src/: attr_ops.cpp  bindings.cpp  call_ops.cpp  exception_ops.cpp  jit_core.cpp  jit_core.h  opcode_handlers.h  opcodes.h
src/justjit/: __init__.py
